--- a/mongo-secret.yaml
+++ b/mongo-secret.yaml
@@ -1,7 +1,9 @@
+# Create a Secret named 'mongo-secret' with a key 'mongo-user' & 'mongo-password' which can be used in a Deployment
+
 apiVersion: v1
 kind: Secret
 metadata:
   name: mongo-secret
 data:
-  mongo-user: bW9uZ291c2Vy
-  mongo-password: bW9uZ29wYXNzd29yZA==
+  mongo-user: bW9uZ291c2Vy # base64 encoded "mongouser"
+  mongo-password: bW9uZ29wYXNzd29yZA== # base64 encoded "password123"
