--- a/mongo-deployment.yaml
+++ b/mongo-deployment.yaml
@@ -1,3 +1,16 @@
+# To create this deployment and service:
+#  1.Prerequisite: Create secret - mongo-secret and configMap - mongo-config:
+#  2.Then apply using: kubectl apply -f mongo-deployment.yaml
+
+
+# To verify:
+# kubectl get pods -l app=mongo
+# kubectl get deployment mongo-deployment
+# kubectl get service mongo-service
+# kubectl describe pod <pod-name>
+# kubectl logs <pod-name>
+
+# ---------------------- MongoDB Deployment ----------------------
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,18 +33,20 @@ spec:
         ports:
         - containerPort: 27017
         env:
-          - name: MONGO_INITDB_ROOT_USERNAME
-            valueFrom:
-              secretKeyRef:
-                name: mongo-secret
-                key: mongo-user
-          - name: MONGO_INITDB_ROOT_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: mongo-secret
-                key: mongo-password
+        - name: MONGO_INITDB_ROOT_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: mongo-secret  
+              key: mongo-user
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef: 
+              name: mongo-secret 
+              key: mongo-password
 
 ---
+
+# ---------------------- MongoDB Service ----------------------
 apiVersion: v1
 kind: Service
 metadata:
@@ -41,7 +56,5 @@ spec:
     app: mongo
   ports:
     - protocol: TCP
-      port: 3000
-      targetPort: 27017
-
-     
+      port: 3000       # Service port (can be used by other pods)
+      targetPort: 27017  # Internal MongoDB port
